fix: added pagination to communications
